Image size fixed on mobile

--- a/_sass/modules/post/_rules.scss
+++ b/_sass/modules/post/_rules.scss
@@ -67,6 +67,9 @@
         margin-bottom: 15px;
         text-align: center;
 
+        img {
+            max-width: 100%;
+        }
         video{
             width: 100%;
             max-width: 100%;
